# llvm-nnsu-2024

./: -emit-llvm  testfun.ll  tr.txt
.github/workflows/: nn-cmplr-tidy.yml
clang/labs/: CMakeLists.txt
clang/labs/lab1/: CMakeLists.txt
clang/labs/lab1/Mamaeva Olga/: CMakeLists.txt
clang/labs/lab1/akopyan_zal/: AlwaysInline.cpp  CMakeList.txt
clang/labs/lab1/alexseev_danila/: CMakeLists.txt  deprecatedWarning.cpp
clang/labs/lab1/balyasov_ivan/: rename_identifiers.cpp
clang/labs/lab1/bend_tatiana/: PrintFunctionNames.cpp
clang/labs/lab1/bodrov_daniil/: CMakeLists.txt  ClassPrinter.cpp  DeprecatedWarn.cpp
clang/labs/lab1/bozin_dmitry/: AlwaysInline.cpp
clang/labs/lab1/hello/: CMakeLists.txt  hello.cpp  test.cpp  test.ll
clang/labs/lab1/isaev_dmitriy/: AlwaysInline.cpp
clang/labs/lab1/ivanov_nikita/: CMakeLists.txt  deprecatedMatcher.cpp
clang/labs/lab1/kalinin_alexandr/: CMakeLists.txt  deprWarnPluginKalinin.cpp  depricatedPlugin.cpp
clang/labs/lab1/kanakov_roman/: RenameInd.cpp
clang/labs/lab1/kashirin_alexander/: Rename_Plugin.cpp
clang/labs/lab1/korablev_nikita/: CMakeLists.txt  RenameIdentificator.cpp
clang/labs/lab1/kosarev_egor/: always_inline.cpp
clang/labs/lab1/kostanyan_arsen/: PrintNames.cpp
clang/labs/lab1/kozyreva_ekaterina/: CMakeLists.txt  PrintClassPlugin.cpp  PrintNames.cpp
clang/labs/lab1/kruglov_alexey/: RenameID.cpp
clang/labs/lab1/kulaev_zhenya/: AttrubuteAlways.cpp
clang/labs/lab1/kulagin_aleksandr/: alwaysInline.cpp
clang/labs/lab1/kulikov_artem/: DeprecatedWarning.cpp
clang/labs/lab1/kurdina_julia/: AddWarning.cpp
clang/labs/lab1/kuznetsov_artyom/: PrintClassMembers.cpp
clang/labs/lab1/kuznetsov_mikhail/: CMakeLists.txt  MGKPlugin.cpp
clang/labs/lab1/loginov_maxim/: CMakeLists.txt  TaskFourRenameIdentificator.cpp
clang/labs/lab1/lysanova_julia/: daprecatedPlugin.cpp  deprecatedPlugin.cpp
clang/labs/lab1/mamaeva_olga/: CMakeLists.txt  MamaevaRenamePlugin.cpp  RenamingIdentifier.cpp
clang/labs/lab1/mirzakhmedov_alexander/: mirzakhmedovClassesPrint.cpp
clang/labs/lab1/mortina_nastya/: PrintikClass.cpp
clang/labs/lab1/nogin_denis/: AddAlwaysInline.cpp
clang/labs/lab1/pivovarov_alexey/: PivovarovAlwaysInline.cpp
clang/labs/lab1/polozov_vladislav/: WarningForDeprecated.cpp  help.txt
clang/labs/lab1/prokofev_kirill/: RenameIdentificator.cpp
clang/labs/lab1/pushkarev_ilya/: AlwaysInline.cpp
clang/labs/lab1/ryabkov_vladislav/: ClassesRyabkov.cpp
clang/labs/lab1/sadikov_damir/: DeprecatedPlugin_SadikovD.cpp
clang/labs/lab1/safarov_nurlan/: identifierRenamer.cpp
clang/labs/lab1/safronov_mikhail/: PrintClasses.cpp
clang/labs/lab1/sharapov_georgiy/: CMakeLists.txt  DepWarningPlugin.cpp  Plugin.cpp
clang/labs/lab1/shishkina_valeriya/: PrintClasses.cpp
clang/labs/lab1/shmelev_ivan/: CMakeLists.txt  ShmelevPrintNamesPlugin.cpp  printNamesPluginShmelev.cpp
clang/labs/lab1/simonyan_suren/: AlwaysInline.cpp  CMakeLists.txt
clang/labs/lab1/soloninko_andrey/: classList.cpp
clang/labs/lab1/travin_maksim/: TravinAlwaysInline.cpp
clang/labs/lab1/ulyanov_daniil/: renameIdentifier.cpp
clang/labs/lab1/vasilev_ivan/: CMakeLists.txt  Find_Deprication.cpp
clang/labs/lab1/veselov_ilya/: printClass.cpp
clang/labs/lab1/veselov_mikhail/: CMakeLists.txt  RenamingIdentifier.cpp
clang/labs/lab1/vetoshnikova_ekaterina/: print_classes.cpp
clang/labs/lab1/volodin_evgeniy/: PrintClassPlugin.cpp
clang/labs/lab1/vyunov_danila/: AlwaysInlinePlugin.cpp  CMakeLists.txt
clang/labs/lab1/zakharov_artem/: CMakeLists.txt
clang/labs/lab2/kuznetsov_artyom/: CMakeLists.txt  instrumention_func.cpp  test.cpp  test.ll  test2.c  test2.ll  test_opt.ll  test_opt2.ll
clang/labs/lab2/pushkarev_ilya/: CMakeLists.txt  InlineWithoutArgs.cpp
clang/labs/lab2/ulyanov_daniil/: CMakeLists.txt
clang/lib/: CMakeLists.txt
clang/lib/DepMatcher/: CMakeLists.txt  CmakeLists.txt  deprecatedMatcher.cpp
clang/test/lab1/akopyan_zal/: Test.cpp
clang/test/lab1/alexseev_danila/: test.cpp
clang/test/lab1/bend_tatiana/: cats.cpp
clang/test/lab1/bodrov_daniil/: test.cpp
clang/test/lab1/bozin_dmitry/: alwaysinlinetest.cpp
llvm/: CMakeLists.txt
llvm/labs/: CMakeLists.txt
llvm/labs/lab1/: CMakeLists.txt
llvm/labs/lab1/kuznetsov_artyom/: CMakeLists.txt  instrumention_func.cpp
llvm/labs/lab2/: CMakeLists.txt
llvm/labs/lab2/ivanov_nikita/: CMakeLists.txt  ivanov.cpp
llvm/labs/lab2/kashirin_alexander/: BitShiftPass.cpp  CMakeLists.txt
llvm/labs/lab2/kulikov_artem/: CMakeLists.txt  Cool.cpp
llvm/test/: CMakeLists.txt
llvm/test/lab3/: main_test.mir  test_muladd.mir
mlir/lib/: CMakeLists.txt
mlir/lib/Transforms/: CMakeLists.txt
mlir/lib/Transforms/lab4/akopyan_zal/: CMakeLists.txt  Div.cpp
mlir/test/: CMakeLists.txt
(+310 files in other folders)
